--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 
 /* Beispiel: Navigation */
 header.site-header {
-  background-color: #7624bf;
+  background-color: #5C4450;
 }
 
 /* Links in der Navigation */
@@ -23,7 +23,7 @@ header.site-header {
 
 /* Seitentitel (oben links) */
 .site-title {
-  color: #7624bf;
+  color: #5C4450;
 }
 
 /* Allgemeine Schriftart */
